--- a/public/css/markdown-github.css
+++ b/public/css/markdown-github.css
@@ -44,6 +44,7 @@
   overflow: auto;
   font-size: 14px;
   line-height: 1.5;
+  color: #24292f;
   background-color: #f6f8fa;
   border-radius: 6px;
   font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, monospace;
