--- a/public/css/markdown-notion.css
+++ b/public/css/markdown-notion.css
@@ -54,6 +54,7 @@
   overflow: auto;
   font-size: 14px;
   line-height: 1.5;
+  color: #37352f;
   background-color: #f7f6f3;
   border-radius: 3px;
   font-family: "SF Mono", SFMono-Regular, ui-monospace, Menlo, Monaco, Consolas, monospace;
